ocaml (3.10.0-6) UNRELEASED; urgency=low

  [ Stefano Zacchiroli ]
  * debian/ocaml-nox.dirs.in
    - avoid creating empty /usr/include/ocaml/* directory (closes: #439017)
  * CDBS class
    - add support for automatic ocamldoc HTML documentation generation

 -- Stefano Zacchiroli <zack@debian.org>  Sat, 25 Aug 2007 20:28:29 +0200

ocaml (3.10.0-5) experimental; urgency=low

  [ Ralf Treinen ]
  * ocaml-mode.emacsen-install: do not hardcode the emacs flavours for which
    to compile ocaml-mode (closes: Bug#433082)
  * ocaml-mode: Bump primary dependency from emacs21 to emacs22.

  [ Stefano Zacchiroli ]
  * add patch arm_ccheckbound_typo, fix a typing error typo which makes ocaml
    FTBFS on arm
  * ocaml-source: install ocaml tarball as
    /usr/src/ocaml-source-VERSION.tar.bz2; the "-source" part was erroneously
    missing and make other packages FTBFS
  * bump debhelper dependencies and compatibility level to 5

 -- Stefano Zacchiroli <zack@debian.org>  Sun, 12 Aug 2007 19:29:07 +0200

ocaml (3.10.0-4) experimental; urgency=low

  * debian/patches/install_ocamlbuild.dpatch
    - patched to install ocamlbuild as .native/.byte (following upstream
      convention which will become widespread in the future), but changes
      ocamlbuild to be a symlink to the best ocamlbuild available
  * CDBS class:
    - avoid dpatch breaking upon clean if debian/patches/*.in files are in use
    - fix the usage example for "OCAML_IN_FILES += ...", it was wrong

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 04 Jul 2007 11:50:43 +0200

ocaml (3.10.0-3) experimental; urgency=low

  * debian/patches/00list
    - enabled install_ocamlbuild patch (was disabled by mistake) and patched
      it fixing a wrong path
  * debian/rules
    - pass -libdir to configure (now that it is supported upstream) in
      addition to sed-ing generated config Makefiles; otherwise ocamlrun won't
      get the correct libdir setting
  * debian/ocaml-md5sums/ocaml-md5sums.1